maze.lessons.maze.island.IslandMaze.scala.error
Escaper:20: error: not found: value keepHanOnSideWall
    keepHanOnSideWall();
    ^